--- a/style/main.css
+++ b/style/main.css
@@ -349,6 +349,7 @@ h4 {
 
 /*flexbox styles*/
 .header_flex,
+.content2_flex,
 .flex_wrapper4,
 .content1_flex,
 .content2_flex,
@@ -357,22 +358,12 @@ h4 {
 .footer_flex_wrapper_1 {
   display: flex;
 }
-.flex,
-.flex_wrapper2,
-.flex_red,
-.flex_pink,
-.flex_violet,
-.footer_flex_right,
-.footer_flex_wrapper_left,
-.flex_tip3 {
+.in_flex400 {
   width: 400px;
 }
-.flex_wrapper1,
-.flex_wrapper3,
-.footer_flex_left {
+.in_flex800 {
   width: 800px;
 }
-.flex_tip4,
-.flex_tip5 {
+.in_flex200 {
   width: 200px;
 }
